[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lobsec"
version = "0.1.0"
description = "LobSec Python SDK - Agent Insurance and Security Protocol"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "LobSec", email = "security@lobsec.org"}
]
keywords = ["web3", "ethereum", "base", "insurance", "ai-agents", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries",
]
dependencies = [
    "web3>=6.0.0",
    "eth-account>=0.8.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://lobsec.org"
Documentation = "https://docs.lobsec.org"
Repository = "https://github.com/lobsec-security/lobsec-sdk"
"Bug Tracker" = "https://github.com/lobsec-security/lobsec-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["lobsec"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
